<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="true_button_text">True</string>
    <string name="false_button_text">False</string>
    <string name="next_button_text">Next Question</string>
    <string name="action_settings">Settings</string>
    <string name="correct_toast">Correct !</string>
    <string name="incorrect_toast">Incorrect !</string>
    <string name="question_plovdiv">3: Plovdiv e vtoriq po golemina grad v Bulgaria</string>
    <string name="question_reka">4: Iskur e nai-dulgata reka v Bulgaria</string>
    <string name="question_stolica">5: Sofiq e stolica na Bulgaria</string>
    <string name="question_planina">2: Stara planina e nai-starata planina v Bulgaria</string>
    <string name="question_more">1: Bulgaria granichi s Atlanticheskiq okean</string>
    <string name="description_image_forward">Image for forward button</string>
    <string name="description_image_back">Image for back button</string>
    <string name="message_first">This is the first question</string>
    <string name="cheat_button_text">Cheat !</string>
    <string name="warning_text">Are you sure you want to do this ?</string>
    <string name="show_answer_button_text">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="action_bar_subtitle">Bulgarian Quiz</string>
</resources>
